# VALOR

./: README.md  pyproject.toml
datasets/: Dataset.md
datasets/attribute/: download.txt
evaluation/: gpt_model.py
evaluation/extraction/: extract_attribute_object.py  extract_attribute_people.py  extract_object_existence.py  extract_relation_comparative.py  extract_relation_positional.py
evaluation/matching/: match_attribute_object.py  match_attribute_people.py  match_object_existence.py  match_relation_comparative.py  match_relation_positional.py
evaluation/postprocess/: postprocess_attribute_object.py  postprocess_attribute_people.py  postprocess_object_existence.py  postprocess_relation_comparative.py  postprocess_relation_positional.py  prepare_before_match_objects.py  prepare_before_match_relation.py
evaluation/scorer/: valor_eval_attribute_object.py  valor_eval_attribute_people.py  valor_eval_object_existence.py  valor_eval_relation_comparative.py  valor_eval_relation_positional.py
generation/: attribute_object.txt  attribute_people.txt  object_existence.txt  relation_comparative.txt  relation_positional.txt
human_annotation/: attribute_object.json  attribute_people.json  object_existence.jsonl  relation_comparative.json  relation_positional.json
scripts/: evaluate_attribute_object.sh  evaluate_attribute_people.sh  evaluate_object_existence.sh  evaluate_relation_comparative.sh  evaluate_relation_positional.sh
